welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: type mismatch;
 found   : Unit
 required: Int
	if ( tea>= 2*candy || candy >= 2*tea ) { (2) }
        ^